--- a/app/src/main/res/layout/activity_ventas.xml
+++ b/app/src/main/res/layout/activity_ventas.xml
@@ -6,4 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".Ventas">
 
+    <TextView
+        android:id="@+id/tvVenta"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/Inv"
+        android:textColor="@color/Negro"
+        android:textSize="40dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/lvProductos"
+        android:layout_width="match_parent"
+        android:layout_height="659dp"
+        android:layout_marginTop="24dp"
+        android:textColor="@color/Amarillo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvVenta"
+        app:layout_constraintVertical_bias="0.4" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
