--- a/app/src/main/res/layout/activity_ventas.xml
+++ b/app/src/main/res/layout/activity_ventas.xml
@@ -22,14 +22,37 @@
     <ListView
         android:id="@+id/lvProductos"
         android:layout_width="match_parent"
-        android:layout_height="659dp"
+        android:layout_height="568dp"
         android:layout_marginTop="24dp"
         android:textColor="@color/Amarillo"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvVenta"
-        app:layout_constraintVertical_bias="0.4" />
+        app:layout_constraintTop_toBottomOf="@+id/tvVenta" />
+
+    <Button
+        android:id="@+id/btnSalir3"
+        android:layout_width="120dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/Salir"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toEndOf="@+id/btnVentas1"
+        app:layout_constraintTop_toBottomOf="@+id/lvProductos" />
+
+    <Button
+        android:id="@+id/btnVentas1"
+        android:layout_width="150dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/Ven"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lvProductos" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
